--- a/examples/fast-build/package.json
+++ b/examples/fast-build/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@example/cool-app",
+  "name": "@example/fast-build",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --experimental-static-build",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build --experimental-static-build",
     "preview": "astro preview"
   },
   "devDependencies": {
