--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "turbo run build --no-deps --scope=astro --scope=create-astro --scope=\"@astrojs/*\"",
     "dev": "turbo run dev --no-deps --no-cache --parallel --scope=astro --scope=create-astro --scope=\"@astrojs/*\"",
     "test": "turbo run test --scope=astro",
+    "test:smoke": "turbo run build --force --scope=www --scope=docs --scope=\"@example/*\"",
     "test:templates": "turbo run test --scope=create-astro",
     "benchmark": "turbo run benchmark --scope=astro",
     "lint": "eslint \"packages/**/*.ts\"",
@@ -33,6 +34,9 @@
       },
       "test": {
         "outputs": []
+      },
+      "test:smoke": {
+        "cache": false
       },
       "test:templates": {
         "outputs": []
