--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/.turbo') }}
+          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
@@ -96,13 +96,6 @@ jobs:
 
       - name: Build Packages
         run: yarn build
-
-      - name: Upload Package Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifacts
-          path: packages/**/dist/**
-          if-no-files-found: error
   
   # Test depends on Build's output, which allows us to skip any build process!
   # We also run `yarn install` with the `--prefer-offline` flag to speed things up.
@@ -131,22 +124,19 @@ jobs:
           node-version: ${{ matrix.node_version }}
           cache: 'yarn'
 
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Extract Artifacts
-        run: ./.github/extract-artifacts.sh
-
       - name: Cache Turbo
         uses: actions/cache@v2
         with:
           path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/.turbo') }}
+          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
         env:
           CI: true
+
+      - name: Build
+        run: yarn build
 
       - name: Test
         if: ${{ matrix.os != 'windows-latest' }}
@@ -175,22 +165,19 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Extract Artifacts
-        run: ./.github/extract-artifacts.sh
-
       - name: Cache Turbo
         uses: actions/cache@v2
         with:
           path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/.turbo') }}
+          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
         env:
           CI: true
+
+      - name: Build
+        run: yarn build
 
       - name: Build
         run: yarn build
@@ -213,23 +200,20 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
-      
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Extract Artifacts
-        run: ./.github/extract-artifacts.sh
 
       - name: Cache Turbo
         uses: actions/cache@v2
         with:
           path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/.turbo') }}
+          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
         env:
           CI: true
+
+      - name: Build
+        run: yarn build
       
       - name: Create Release Pull Request or Publish
         id: changesets
