--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,14 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+      
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            "**/node_modules"
+            "**/.turbo"
+          key: yarn-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
@@ -83,11 +91,13 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Cache Turbo
+      - name: Cache
         uses: actions/cache@v2
         with:
-          path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
+          path: |
+            "**/node_modules"
+            "**/.turbo"
+          key: yarn-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
@@ -124,11 +134,13 @@ jobs:
           node-version: ${{ matrix.node_version }}
           cache: 'yarn'
 
-      - name: Cache Turbo
+      - name: Cache
         uses: actions/cache@v2
         with:
-          path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
+          path: |
+            "**/node_modules"
+            "**/.turbo"
+          key: yarn-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
@@ -165,11 +177,13 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Cache Turbo
+      - name: Cache
         uses: actions/cache@v2
         with:
-          path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
+          path: |
+            "**/node_modules"
+            "**/.turbo"
+          key: yarn-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
@@ -201,11 +215,13 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Cache Turbo
+      - name: Cache
         uses: actions/cache@v2
         with:
-          path: "**/.turbo"
-          key: turbo-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('node_modules/.cache/turbo') }}
+          path: |
+            "**/node_modules"
+            "**/.turbo"
+          key: yarn-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
 
       - name: Install NPM Dependencies
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
