--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: node-${{ hashFiles('.github/workflows/ci.yml') }}-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Cache Turbo
         if: steps.cache-node.outputs.cache-hit == 'true'
@@ -102,7 +102,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: node-${{ hashFiles('.github/workflows/ci.yml') }}-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Cache Turbo
         if: steps.cache-node.outputs.cache-hit == 'true'
@@ -151,7 +151,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: node-${{ hashFiles('.github/workflows/ci.yml') }}-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Cache Turbo
         if: steps.cache-node.outputs.cache-hit == 'true'
@@ -200,7 +200,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: node-${{ hashFiles('.github/workflows/ci.yml') }}-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Cache Turbo
         if: steps.cache-node.outputs.cache-hit == 'true'
@@ -244,7 +244,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: node-${{ hashFiles('.github/workflows/ci.yml') }}-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Cache Turbo
         if: steps.cache-node.outputs.cache-hit == 'true'
