chore(actions): update caching logic, remove specific turbo cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,24 +36,25 @@ jobs:
           node-version: 16
           cache: 'yarn'
       
-      - name: Cache Node
+      - name: Cache Node Modules
         id: cache-node
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-      
-      - name: Cache Turbo
-        if: ${{ steps.cache-node.outputs.cache-hit == 'true' && hashFiles('**/node_modules/.cache/turbo') != '' }}
-        uses: actions/cache@v2
-        with:
-          path: "**/.turbo"
-          key: cache-turbo-${{ runner.os }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
+          key: cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+          restore-keys: |
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install NPM Dependencies
+        if: ${{ steps.cache-node.outputs.cache-hit != 'true' }}
         run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
         env:
           CI: true
+
+      - name: Setup Workspace
+        if: ${{ steps.cache-node.outputs.cache-hit == 'true' }}
+        run: yarn --frozen-lockfile --ignore-engines --offline
       
       - name: Status
         run: git status
@@ -97,22 +98,15 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Cache Node
+      - name: Cache Node Modules
         id: cache-node
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+          key: cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
           restore-keys: |
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-
-      
-      - name: Cache Turbo
-        if: ${{ steps.cache-node.outputs.cache-hit == 'true' && hashFiles('**/node_modules/.cache/turbo') != '' }}
-        uses: actions/cache@v2
-        with:
-          path: "**/.turbo"
-          key: cache-turbo-${{ runner.os }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install NPM Dependencies
         if: ${{ steps.cache-node.outputs.cache-hit != 'true' }}
@@ -154,22 +148,15 @@ jobs:
           node-version: ${{ matrix.node_version }}
           cache: 'yarn'
 
-      - name: Cache Node
+      - name: Cache Node Modules
         id: cache-node
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+          key: cache-node_modules-${{ runner.os }}-${{ matrix.node_version }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
           restore-keys: |
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-
-      
-      - name: Cache Turbo
-        if: ${{ steps.cache-node.outputs.cache-hit == 'true' && hashFiles('**/node_modules/.cache/turbo') != '' }}
-        uses: actions/cache@v2
-        with:
-          path: "**/.turbo"
-          key: cache-turbo-${{ runner.os }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
+            cache-node_modules-${{ runner.os }}-${{ matrix.node_version }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+            cache-node_modules-${{ runner.os }}-${{ matrix.node_version }}-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install NPM Dependencies
         if: ${{ steps.cache-node.outputs.cache-hit != 'true' }}
@@ -205,22 +192,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cache Node
+      - name: Setup node@16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'yarn'
+
+      - name: Cache Node Modules
         id: cache-node
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+          key: cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
           restore-keys: |
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-
-      
-      - name: Cache Turbo
-        if: ${{ steps.cache-node.outputs.cache-hit == 'true' && hashFiles('**/node_modules/.cache/turbo') != '' }}
-        uses: actions/cache@v2
-        with:
-          path: "**/.turbo"
-          key: cache-turbo-${{ runner.os }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install NPM Dependencies
         if: ${{ steps.cache-node.outputs.cache-hit != 'true' }}
@@ -251,22 +237,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cache Node
+      - name: Setup node@16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'yarn'
+
+      - name: Cache Node Modules
         id: cache-node
         uses: actions/cache@v2
         with:
           path: "**/node_modules"
-          key: cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+          key: cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
           restore-keys: |
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
-            cache-node-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-
-      
-      - name: Cache Turbo
-        if: ${{ steps.cache-node.outputs.cache-hit == 'true' && hashFiles('**/node_modules/.cache/turbo') != '' }}
-        uses: actions/cache@v2
-        with:
-          path: "**/.turbo"
-          key: cache-turbo-${{ runner.os }}-${{ hashFiles('**/node_modules/.cache/turbo') }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-${{ github.run_id }}
+            cache-node_modules-${{ runner.os }}-16-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install NPM Dependencies
         if: ${{ steps.cache-node.outputs.cache-hit != 'true' }}
