--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ defaults:
 
 jobs:
   # Lint can run in parallel with Build.
-  # We also run `yarn install` with the `--prefer-offline` flag to speed things up.
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -83,8 +82,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           neutral_check_on_warning: true
 
-  # Build installs all devDependencies and runs our full build pipeline.
-  # We upload all `dist/` artifacts to GitHub, which can be shared by all dependent jobs.
+  # Build installs all dependencies and runs our full build pipeline.
   build:
     name: Build Packages
     runs-on: ubuntu-latest
@@ -122,7 +120,6 @@ jobs:
         run: yarn build
   
   # Test depends on Build's output, which allows us to skip any build process!
-  # We also run `yarn install` with the `--prefer-offline` flag to speed things up.
   test:
     name: 'Test: ${{ matrix.os }} (node@${{ matrix.node_version }})'
     runs-on: ${{ matrix.os }}
